fix install button spinning alignment (bug 1122799)

--- a/src/media/css/buttons.styl
+++ b/src/media/css/buttons.styl
@@ -178,7 +178,7 @@ a.button {
     &.spinning,
     &.purchasing {
         background: $action-positive-tapped;
-        bottom: 3px;
+        bottom: 12px;
         height: $btn-tiny;
 
         em {
